<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient_good">

    <LinearLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/city_name"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
         />


        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_corner"
            android:src="@drawable/search_icon"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/air_quality_number"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/search_container"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/_100"
        android:textSize="44sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/air_description"
        android:layout_width="230dp"
        android:layout_height="150dp"
        android:layout_below="@id/search_container"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:text="Hello World!"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/air_quality_number"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="24sp"
        android:text="@string/city"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/weather_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/city"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/uvi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uvi"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ozone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ozone"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clouds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/weather_container">

    <ImageView
        android:id="@+id/cloud1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@mipmap/cloud"/>

        <ImageView
            android:id="@+id/cloud2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/cloud"
            android:layout_alignParentEnd="true"/>
        <ImageView
            android:id="@+id/cloud3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="40dp"
            android:src="@mipmap/cloud"/>

</RelativeLayout>

    <RelativeLayout
        android:id="@+id/town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clouds"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@mipmap/skyline"
            android:layout_marginStart="10dp"
            android:layout_alignParentBottom="true"
            />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@mipmap/building_and_tree"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/buildings"
            android:layout_alignParentBottom="true"
            />



    </RelativeLayout>

</RelativeLayout>